# rt

./: CMakeLists.txt
lib/ssmath/: mat3.hpp  mat4.hpp  ssmath.hpp  vec2.hpp  vec3.hpp  vec4.hpp
scenes/proj-04/: scene01_depth.xml
scenes/proj-05/: scene03.xml
scenes/proj-06/lights_scene/: demo_all_lights.xml
scenes/proj-06/rows_mirror_spheres/: materials.xml  objects.xml  strip_of_spheres.xml
scenes/proj-06/spot_scene/: spotlights.xml
scenes/proj-07/: three_spheres.xml
scenes/proj-07/teapot_scene/: teapot_geometry.xml  teapot_scene.xml
scenes/proj-07/three_spheres/: three_spheres_above.xml  three_spheres_below.xml
scenes/proj-08/: bvh.xml  three_spheres.xml
scenes/proj-08/teapot_scene/: teapot_geometry.xml  teapot_materials.xml  teapot_scene.xml
src/core/: api.cpp  api.hpp  background.cpp  background.hpp  camera.cpp  camera.hpp  common.hpp  film.cpp  film.hpp  image.cpp  image.hpp  parser.cpp  parser.hpp  ray.hpp  scenes.hpp
src/core/integrators/: blinnPhongIntegrator.cpp  blinnPhongIntegrator.hpp  depth_integrator.cpp  depth_integrator.hpp  include_integrator.hpp  integrator.cpp  integrator.hpp  normalMapIntegrator.cpp  normalMapIntegrator.hpp  rayCastIntegrator.cpp  rayCastIntegrator.hpp  toonIntegrator.cpp  toonIntegrator.hpp
src/core/light/: ambient_light.cpp  ambient_light.hpp  directional_light.cpp  directional_light.hpp  include_lights.hpp  light.hpp  point_light.cpp  point_light.hpp  spot_light.cpp  spot_light.hpp  visibilityTester.cpp  visibilityTester.hpp
src/core/materials/: blinn_phong_material.hpp  include_material.hpp  material.hpp  toon_material.hpp
src/core/primitives/: bvh_accel.cpp  bvh_accel.hpp  cube.cpp  cube.hpp  fbounds.hpp  include_primitive.hpp  plane.cpp  plane.hpp  primitive.cpp  primitive.hpp  shape.hpp  sphere.cpp  sphere.hpp  square.cpp  square.hpp  star.cpp  star.hpp  surfel.hpp  triangle.cpp  triangle.hpp
